--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "^2.3.4",
     "ejs-locals": "^1.0.2",
     "express": "^4.13.3",
-    "speechjs": "0.0.1"
+    "request": "^2.67.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7"
   }
 }
